# Isaac-RL-Two-wheel-Legged-Bot

./: .gitignore  .gitmodules  Flamingo.pth  INSTALL.md  LICENCE  README.md  convert_npy_tools.py  flamingo_stand.py  flamingo_stand_main.py  flamingo_stand_position.py  flamingo_stand_torque.py  flamingo_stand_velocity.py  flamingo_tester.py  forward_kinematics_test.txt  main.py  pt.py  pyproject.toml  setup.py  test.py  train.py  trajectory_debugger.py  your_custom_env.py
analyzer/: check_mem.py  convert_npy_tools.py  (+1 more)
lab/flamingo/assets/data/Robots/Flamingo/flamingo_edu_v1/Edu_v1_urdf/: CMakeLists.txt  package.xml
lab/flamingo/assets/data/Robots/Flamingo/flamingo_edu_v1/Edu_v1_urdf/config/: joint_names_Edu_v4.yaml
lab/flamingo/assets/data/Robots/Flamingo/flamingo_edu_v1/Edu_v1_urdf/launch/: display.launch  gazebo.launch
lab/flamingo/assets/data/Robots/Flamingo/flamingo_edu_v1/Edu_v1_urdf/meshes/: base_link.STL  front_cover_link.STL  left_leg_link.STL  left_shoulder_link.STL  left_upper_link.STL  left_wheel_link.STL  rear_cover_link.STL  right_leg_link.STL  right_shoulder_link.STL  right_upper_link.STL  right_wheel_link.STL
lab/flamingo/assets/data/Robots/Flamingo/flamingo_edu_v1/Edu_v1_urdf/urdf/: Edu_v4.csv  Edu_v4.urdf
lab/flamingo/assets/data/Robots/Flamingo_Arm/A1_rev_3_3_0/6AXIS_V2_B_RE0_CO_v13/: CMakeLists.txt  package.xml
lab/flamingo/assets/data/Robots/Flamingo_Arm/A1_rev_3_3_0/6AXIS_V2_B_RE0_CO_v13/config/: joint_names_6AXIS V2_B_RE0_CO_v13.yaml
lab/flamingo/assets/data/Robots/Flamingo_Arm/A1_rev_3_3_0/6AXIS_V2_B_RE0_CO_v13/launch/: gazebo.launch
(+488 files in other folders)
